# laguz-1

./: Justfile
.trunk/: trunk.yaml
ado-exports/: address-list-laguz-1-holders-1669956201081.json  cw721-bids-laguz-1-bid-1669956197668.json  cw721-laguz-1-721-1669956190722.json  primitive-laguz-1-primitive-1669956195862.json  publish-settings-publish-settings-1669956172903.json  template_laguz-1.flex
ado-exports/laguz-1/: address-list-laguz-1-bidders-1669956199276.json  cw721-bids-laguz-1-bid-1669956197668.json  template_laguz-1.flex
laguz-1-contract/: Cargo.toml
laguz-1-contract/src/: gumball.rs  lib.rs
laguz-1-frontend/: index.html  package-lock.json  package.json
laguz-1-frontend/src/: App.tsx
laguz-1-scripts/: andromeda_types.ts  flex_template.ts  generate_and_check_flex.ts  generate_flex.ts  generate_flex_laguz-2.ts  laguz_types.ts  package-lock.json  package.json  types.ts
