[package]
name = "laguz-1-contract"
version = "0.1.0"
edition = "2018"

[features]
backtraces = ["cosmwasm-std/backtraces"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "1.0.0"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
schemars = "0.8.3"
cw-utils = "0.13.2"
cw721 = "0.13.2"
cw721-base = { version = "0.13.2", features=["library"]}

# common = { path = "../common", version = "0.1.0" }
andromeda-non-fungible-tokens = { git = "https://github.com/andromedaprotocol/andromeda-core/", branch = "development" }

